Small text edit on index.html

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,5 +4,5 @@ deployment:
     - /bin/cp -R assets $DEPLOYPATH
     - /bin/cp -R styles $DEPLOYPATH
     - /bin/cp -R scripts $DEPLOYPATH
-    /bin/cp index.html $DEPLOYPATH
-    /bin/cp 404.html $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp 404.html $DEPLOYPATH
