--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: yourdomain.com
+        server: camrynodonnell.com
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
