Excluded files from push, archived .cpanel.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,8 @@ jobs:
         server: camrynodonnell.com
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/site-version-archive/**
+          README.md
